--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,26 @@
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Christian Seip</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description"
+        content="Professionelle digitale Lösungen – von Backend bis Frontend. Portfolio & Projekte von Christian Seip.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.seip.io">
+  <meta property="og:title" content="Christian Seip – Webentwickler">
+  <meta property="og:description"
+        content="Professionelle digitale Lösungen – von Backend bis Frontend. Portfolio & Projekte von Christian Seip.">
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://www.seip.io">
+  <meta property="twitter:title" content="Christian Seip – Webentwickler">
+  <meta property="twitter:description"
+        content="Professionelle digitale Lösungen – von Backend bis Frontend. Portfolio & Projekte von Christian Seip.">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://static.seip.io/images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://static.seip.io/images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://static.seip.io/images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="https://www.seip.io/site.webmanifest">
 </head>
 <body>
   <app-root></app-root>
